Update to Spring Boot 4.1 (#51)
* Update dependencies and improve benchmark scripts for Spring Boot 4.1
* Tune Tomcat connection handling for benchmarks
* Document benchmark host tuning
* Created error log files for loom-netty and webflux-netty services during high load tests, capturing server errors and exceptions.
* Added JVM memory usage and latency metrics for loom-tomcat under sharp spikes scenario.
* Introduced system performance metrics for loom-tomcat, detailing CPU usage and network statistics.
* Included a CSV file for results of empty error scenarios in chart tests, summarizing requests per second and latency averages.
* Update benchmark results and refine performance comparisons between Virtual Threads and WebFlux